# pineko

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  README.md  _run.py  debug.py  debug2.py  debug3.py  download_test_data.sh  eko_debug.py  old.py  pineko.ci.toml  pineko.cli.toml  pineko.debug.toml  pineko.toml  pixi.toml  pyproject.toml  regression_check.sh  run.py  run2.py  setup.py  sv.py  test-requirements.txt  todo.md  yadism_debug.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  codecov.yml  dependabot.yml
.github/workflows/: bench.yml  download_test_data.sh  isobench.yml  pypi.yml  regression.yml  unittests.yml  workflow.yml
_data/: observable-simple.yaml  theory_200.yaml  theory_208.yaml  theory_213.yaml
benchmarks/: bench_autosv.py  bench_checks.py  bench_cli.py  bench_comparator.py  bench_configs.py  bench_evolution_consistency.py  bench_evolve.py  bench_fonll.py  bench_kfactor.py  bench_regression.py  bench_theory.py  bench_theory_card.py  checks_bench.py  checks_evolve.py  cli_bench.py  comparator_bench.py  configs_bench.py  conftest.py  evolve_bench.py  theory_bench.py  theory_card_bench.py
benchmarks/data_files/: pineko.toml
benchmarks/data_files/data/ekos/208/: LHCB_DY_13TEV_DIMUON.tar
benchmarks/data_files/data/fktables/208/: HERA_CC_318GEV_EM_SIGMARED.pineappl.lz4
benchmarks/data_files/data/grids/208/: HERA_CC_318GEV_EM_SIGMARED.pineappl.lz4  LHCB_DY_13TEV_DIMUON.pineappl.lz4  NUTEV_CC_NU_FE_SIGMARED.pineappl.lz4
benchmarks/data_files/data/operator_cards/: _template.yaml
benchmarks/data_files/data/theory_cards/: 208.yaml
benchmarks/data_files/data/yamldb/: HERACOMBCCEM.yaml  LHCB_Z_13TEV_DIMUON.yaml
benchmarks/fakepdfs/NNPDF40_nlo_as_01180/: NNPDF40_nlo_as_01180.info
benchmarks/regression_data/: LHCBWZMU8TEV.npy
data/: .gitignore  observable-f2b.yaml  observable-f2c.yaml  observable-simple.yaml  observable.yaml  operator.yaml  theory.yaml  theory_200.yaml  theory_208.yaml  theory_213.yaml  theory_old.yaml
data/grids/: load.sh
data/kfactors/: generate.py  generate_ALL.py  generate_g1.py  generate_g1f1.py
data/ymldb/: load.sh
data1/: .gitignore  observable.yaml
design/: README.md
docs/: Makefile
docs/source/: conf.py  index.rst  refs.bib
docs/source/overview/: Prerequisites.rst  User-guide.rst  examples.rst  indices.rst  prerequisites.rst  running.rst
docs/source/shared/: abbreviations.rst
docs/source/static/: site.css
docs/source/theory/: Scalevar.rst  Schemes.rst  fktables.rst  fonll.rst  kfactors.rst  scalevar.rst
extras/: Sv_generator.nb  sv2.nb
src/pineko/: __init__.py  __main__.py  check.py  comparator.py  configs.py  ekompatibility.py  evolve.py  fonll.py  kfactor.py  kfactor_inclusion.py  opcard_template.py  parser.py  runner.py  scaffold.py  scale_variations.py  template.py  theory.py  theory_card.py  utils.py  version.py
src/pineko/cli/: __init__.py  _base.py  auto_sv.py  check.py  check_scalevar.py  combine_fonll.py  compare.py  convolute.py  convolve.py  fonll.py  gen_sv.py  include_kfactor.py  kfactor.py  opcard.py  scaffold.py  theory_.py  theory_ekos.py  theory_fks.py  theory_opcards.py
tests/: conftest.py  conftests.py  test_check.py  test_cli.py  test_configs.py  test_evolution_consistency.py  test_evolve.py  test_fonll.py  test_kfactor.py  test_me.py  test_regression.py  test_scaffold.py  test_scale_variations.py  test_theory.py  test_theory_card.py  test_theory_sv.py  test_utils.py
tests/regression_data/: INTEGXT3.npy  LHCBWZMU8TEV.npy
tests/test_files/: pineko.toml
tests/test_files/data/operator_cards/: _template.yaml
