[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pineko"
version = "0.1.0"
description = "Combine PineAPPL grids and EKOs into FK tables"
authors = [
  "Alessandro Candido <alessandro.candido@mi.infn.it>",
  "Juan Cruz Martinez <juan.cruz@mi.infn.it>",
  "Felix Hekhorn <felix.hekhorn@mi.infn.it>",
  "Christopher Schwan <christopher.schwan@physik.uni-wuerzburg.de>",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
eko = "^0.8.5"
pineappl = "^0.5.2"
PyYAML = "^6.0"
numpy = "^1.21.0"
pandas = "^1.4.1"
rich = "^11.2.0"
appdirs = "^1.4.4"
click = "^8.0.4"
tomli = "^2.0.1"
a3b2bbc3ced97675ac3a71df45f55ba = "^6.4.0"

[tool.poetry.dev-dependencies]
# code review
pylint = "^2.9.3"
# debug / explore
pdbpp = "^0.10.3"
ipython = "^7.28.0"
# test
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-env = "^0.6.2"

[tool.poetry.scripts]
pineko = "pineko:command"

[tool.poe.tasks]
test = "pytest tests"
lint = "pylint src/**/*.py -E"
lint-warnings = "pylint src/**/*.py --exit-zero"
pineko = "pineko"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = true

[tool.poetry-dynamic-versioning.substitution]
files = ["src/pineko/__init__.py"]

[tool.pytest.ini_options]
testpaths = ['tests/', 'benchmarks/']
addopts = [
  '--cov=eko',
  '--cov=ekobox',
  '--cov-report=html',
  '--cov-report=xml',
  '--strict-markers',
]
env = ["D:NUMBA_DISABLE_JIT=1"]

[tool.pylint.master]
# extensions not to check
extension-pkg-whitelist = ["numpy", "numba", "lhapdf", "pineappl"]
ignore-paths = ["benchmarks/", "doc/", "tests/", "data/"]
# jobs has to be 1 as pylint is NOT threadsafe
jobs = 1
[tool.pylint.messages_control]
disable = ["invalid-name", "fixme"]
[tool.pylint.reports]
# Available formats are:
# text, parseable, colorized, json and msvs (visual studio).
output-format = "colorized"
[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 100
[tool.pylint.design]
# Maximum number of arguments for function / method
max-args = 10
